Objective,index,reponsive enhancement3

--- a/Competitive_courses.html
+++ b/Competitive_courses.html
@@ -1,68 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Prayas Institute of Education</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="" />
-        <meta name="author" content="http://webthemez.com" />
-        <!-- css -->
-        <link href="css/bootstrap.min.css" rel="stylesheet" />
-        <link href="css/fancybox/jquery.fancybox.css" rel="stylesheet">
-        <link href="css/jcarousel.css" rel="stylesheet" />
-        <link href="css/flexslider.css" rel="stylesheet" />
-        <link href="css/style.css" rel="stylesheet" />
-    </head>
-    <body>
-        <div id="wrapper">
-            <!-- start header -->
-            <header>
-                <div class="navbar navbar-default navbar-static-top">
-                    <div class="container">
-                        <div class="navbar-header">
-                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                            </button>
-                            <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo"/></a>
-                        </div>
-                        <div class="navbar-collapse collapse ">
-                            <ul class="nav navbar-nav">
+<head>
+<meta charset="utf-8">
+<title>Prayas Institute of Education</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="description" content="" />
+<meta name="author" content="http://webthemez.com" />
+ 
+<link href="css/bootstrap.min.css" rel="stylesheet" />
+<link href="css/fancybox/jquery.fancybox.css" rel="stylesheet">
+<link href="css/jcarousel.css" rel="stylesheet" />
+<link href="css/flexslider.css" rel="stylesheet" />
+<link href="css/style.css" rel="stylesheet" />
+ 
+<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+<!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+</head>
+<body>
+<div id="wrapper">
+
+	<!-- start header -->
+		<header>
+        <div class="navbar navbar-default navbar-static-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo"/></a>
+                </div>
+                <div class="navbar-collapse collapse ">
+                     <ul class="nav navbar-nav">
                                 <li><a href="index.html">Home</a></li> 
-                                <li class="active"><a href="objective.html">Objective</a></li>
+                                <li><a href="objective.html">Objective</a></li>
                                 <li><a href="Academic_courses.html">Academic Classes</a></li>
-                                <li><a href="Competitive_courses.html">Competitive Exam Class</a></li>
+                                <li class="active"><a href="Competitive_courses.html">Competitive Exam Class</a></li>
                                 <li><a href="Entrance_courses.html">Entrance Exam Classes</a></li>
                                 <li><a href="about.html">About Us</a></li>
                                 <li><a href="contact.html">Contact Us</a></li>
                             </ul>
-                        </div>
-                    </div>
                 </div>
-            </header><!-- end header -->
-            <section id="inner-headline">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <h2 class="pageTitle">Objective</h2>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section id="content">
-                <div class="container">
-                    <p>
+            </div>
+        </div>
+	</header><!-- end header -->
+	<section id="inner-headline">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12">
+				<h2 class="pageTitle">Competitive Exam Class</h2>
+			</div>
+		</div>
+	</div>
+	</section>
+	 
+	<section id="content">
+		<div class="container">		 
+				
+<section class="course"> 
 
-                        Prayas Institute of Education exists to support students. We adopt a one of a kind and inventive strategy to instructing that assists understudies with interfacing with the topic they have to ace. Through customized and centered showing forms, our understudies build up the apparatuses they requirement for progressing accomplishment in their fields of study. Our prosperity relies upon our regard for the necessities of our understudies and genuinely helping them to accomplish – we don't succeed except if our understudies succeed. 
-                    </p><br><p>
-                    The ethos of Prayas Institute of Education is to perceive the potential in each understudy and give the highest caliber of training to enable them to succeed. We are here to enable our understudies to accomplish their full scholarly potential utilizing one of a kind instructing strategies. Our educators comprise of qualified instructors, experts and current students. We accept that taking in a subject from alternate points of view permits an understudy to completely comprehend the theme. We don't sell dreams; rather we help our understudies progress in the direction of them.
-                    </p><br><p>
-                    Our fundamental objective at Prayas Institute of Education is to guarantee that we can make a situation that will be moving to our understudies and can give them the certainty and excitement to accomplish the most noteworthy potential outcomes. Our instructors are experienced, exceptionally scholastic and endeavor to offer the best quality training.
-                    </p><b><br>
-                    </div>
-                    </section>
-                <footer>
+		<div class="row">
+			<div class="col-lg-12">
+				<div class=""><h3>Courses We Offer</h3><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus, vero mollitia velit ad consectetur. Alias, laborum excepturi nihil autem nemo numquam, ipsa architecto non, magni consequuntur quam.</div>
+			</div>
+		</div>
+<div class="row">
+            <div class="col-md-4">
+			<div class="textbox clour1">
+                <h3>TET/CTET</h3>
+				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
+            </div> </div>
+            <div class="col-md-4">
+			<div class="textbox clour2">
+                  <h3>Banking</h3>
+				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
+            </div> </div>
+			<div class="col-md-4">
+			<div class="textbox clour3">
+                  <h3>SSC</h3>
+				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
+            </div> </div>
+        </div>
+		<div class="row">
+            <div class="col-md-4">
+			<div class="textbox clour4">
+                <h3>Railway</h3>
+				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
+            </div> </div>
+            <div class="col-md-4">
+			<div class="textbox clour5">
+                  <h3>UPSSC</h3>
+				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
+            </div> </div>
+			<div class="col-md-4">
+			<div class="textbox clour6">
+                  <h3>Defence</h3>
+				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
+            </div> </div>
+        </div>
+</section>	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus</p> </br>  
+    </div>
+    </section>
+	 <footer>
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-4" align="center">
