--- a/about.html
+++ b/about.html
@@ -38,9 +38,9 @@
                             <ul class="nav navbar-nav">
                                 <li><a href="index.html">Home</a></li> 
                                 <li><a href="objective.html">Objective</a></li>
-                                <li><a href="#">Academic Classes</a></li>
-                                <li><a href="#">Competitive Exam Class</a></li>
-                                <li><a href="#">Entrance Exam Classes</a></li>
+                                <li><a href="Academic_courses.html">Academic Classes</a></li>
+                                <li><a href="Competitive_courses.html">Competitive Exam Class</a></li>
+                                <li><a href="Entrance_courses.html">Entrance Exam Classes</a></li>
                                 <li  class="active"><a href="about.html">About Us</a></li>
                                 <li><a href="contact.html">Contact Us</a></li>
                             </ul>
@@ -280,9 +280,9 @@
             <footer>
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-3">
+                        <div class="col-lg-4" align="center">
                             <div class="widget">
-                                <h5 class="widgetheading">Our Contact</h5>
+                                <h5 class="widgetheading text-info">Our Contact</h5>
                                 <address>
                                     <p>Prayas Institute Of Education<br>
                                         A/49, Near Railway Crossing,<br>
@@ -293,35 +293,24 @@
                                 </address>
                             </div>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-4" align="center">
                             <div class="widget">
-                                <h5 class="widgetheading">Quick Links</h5>
+                                <h5 class="widgetheading text-info">Our Courses</h5>
                                 <ul class="link-list">
-                                    <li><a href="#">Latest Events</a></li>
+                                    <li><a href="#">Academic Classes</a></li>
+                                    <li><a href="#">Competitive Exam Class</a></li>
+                                    <li><a href="#">Entrance Exam Classes</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-lg-4" align="center">
+                            <div class="widget">
+                                <h5 class="widgetheading text-info">Quick Links</h5>
+                                <ul class="link-list">
                                     <li><a href="#">Terms and conditions</a></li>
                                     <li><a href="privacy.html">Privacy policy</a></li>
                                     <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdP3IPAt4LXuRL-3rCl5qtCQ1HfRd5dd9wTMZN2EaPgrjMPww/viewform?usp=sf_link">Career</a></li>
                                     <li><a href="contact.html">Contact us</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-lg-3">
-                            <div class="widget">
-                                <h5 class="widgetheading">Latest posts</h5>
-                                <ul class="link-list">
-                                    <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a></li>
-                                    <li><a href="#">Pellentesque et pulvinar enim. Quisque at tempor ligula</a></li>
-                                    <li><a href="#">Natus error sit voluptatem accusantium doloremque</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-lg-3">
-                            <div class="widget">
-                                <h5 class="widgetheading">Recent News</h5>
-                                <ul class="link-list">
-                                    <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a></li>
-                                    <li><a href="#">Pellentesque et pulvinar enim. Quisque at tempor ligula</a></li>
-                                    <li><a href="#">Natus error sit voluptatem accusantium doloremque</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -354,9 +343,7 @@
             </footer>
         </div>
         <a href="#" class="scrollup"><i class="fa fa-angle-up active"></i></a>
-        <!-- javascript
-================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
+        <!-- javascript-->
         <script src="js/jquery.js"></script>
         <script src="js/jquery.easing.1.3.js"></script>
         <script src="js/bootstrap.min.js"></script>
@@ -367,5 +354,6 @@
         <script src="js/jquery.flexslider.js"></script>
         <script src="js/animate.js"></script>
         <script src="js/custom.js"></script>
+        <script src="js/validate.js"></script>
     </body>
 </html>
