--- a/index.html
+++ b/index.html
@@ -27,37 +27,15 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo"/></a>
+                            <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo" hight="100%"/></a>
                         </div>
                         <div class="navbar-collapse collapse ">
                             <ul class="nav navbar-nav">
                                 <li class="active"><a href="index.html">Home</a></li> 
                                 <li><a href="objective.html">Objective</a></li>
-                                <li class="dropdown">
-                                    <a class="dropdown-toggle" href="#" data-toggle="dropdown">Academic Classes</a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="#">6 to 12 (English/Hindi medium)</a></li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown">
-                                    <a class="dropdown-toggle" href="#" data-toggle="dropdown">Competitive Exam Class</a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="#">TET/CTET</a></li>
-                                        <li><a href="#">BANKING</a></li>
-                                        <li><a href="#">SSC</a></li>
-                                        <li><a href="#">RAILWAY</a></li>
-                                        <li><a href="#">NET</a></li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown">
-                                    <a class="dropdown-toggle" href="#" data-toggle="dropdown">Entrance Exam Classes</a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="#">UPSEE</a></li>
-                                        <li><a href="#">IIT</a></li>
-                                        <li><a href="#">NEET/AIIMS</a></li>
-                                        <li><a href="#">BITSAT</a></li>
-                                    </ul>
-                                </li>
+                                 <li><a href="Academic_courses.html">Academic Classes</a></li>
+                                <li><a href="Competitive_courses.html">Competitive Exam Class</a></li>
+                                <li><a href="Entrance_courses.html">Entrance Exam Classes</a></li>
                                 <li><a href="about.html">About Us</a></li>
                                 <li><a href="contact.html">Contact Us</a></li>
                             </ul>
@@ -237,9 +215,9 @@
             <footer>
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-3">
+                        <div class="col-lg-4" align="center">
                             <div class="widget">
-                                <h5 class="widgetheading">Our Contact</h5>
+                                <h5 class="widgetheading text-info">Our Contact</h5>
                                 <address>
                                     <p>Prayas Institute Of Education<br>
                                         A/49, Near Railway Crossing,<br>
@@ -250,35 +228,24 @@
                                 </address>
                             </div>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-4" align="center">
                             <div class="widget">
-                                <h5 class="widgetheading">Quick Links</h5>
+                                <h5 class="widgetheading text-info">Our Courses</h5>
                                 <ul class="link-list">
-                                    <li><a href="#">Latest Events</a></li>
+                                    <li><a href="#">Academic Classes</a></li>
+                                    <li><a href="#">Competitive Exam Class</a></li>
+                                    <li><a href="#">Entrance Exam Classes</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-lg-4" align="center">
+                            <div class="widget">
+                                <h5 class="widgetheading text-info">Quick Links</h5>
+                                <ul class="link-list">
                                     <li><a href="#">Terms and conditions</a></li>
                                     <li><a href="privacy.html">Privacy policy</a></li>
                                     <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdP3IPAt4LXuRL-3rCl5qtCQ1HfRd5dd9wTMZN2EaPgrjMPww/viewform?usp=sf_link">Career</a></li>
                                     <li><a href="contact.html">Contact us</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-lg-3">
-                            <div class="widget">
-                                <h5 class="widgetheading">Latest posts</h5>
-                                <ul class="link-list">
-                                    <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a></li>
-                                    <li><a href="#">Pellentesque et pulvinar enim. Quisque at tempor ligula</a></li>
-                                    <li><a href="#">Natus error sit voluptatem accusantium doloremque</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-lg-3">
-                            <div class="widget">
-                                <h5 class="widgetheading">Recent News</h5>
-                                <ul class="link-list">
-                                    <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a></li>
-                                    <li><a href="#">Pellentesque et pulvinar enim. Quisque at tempor ligula</a></li>
-                                    <li><a href="#">Natus error sit voluptatem accusantium doloremque</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -311,7 +278,7 @@
             </footer>
         </div>
         <a href="#" class="scrollup"><i class="fa fa-angle-up active"></i></a>
-        <!--start javascript-->
+        <!-- javascript-->
         <script src="js/jquery.js"></script>
         <script src="js/jquery.easing.1.3.js"></script>
         <script src="js/bootstrap.min.js"></script>
@@ -322,7 +289,6 @@
         <script src="js/jquery.flexslider.js"></script>
         <script src="js/animate.js"></script>
         <script src="js/custom.js"></script>
-        <script src="js/owl-carousel/owl.carousel.js"></script>
-        <!--end javascript-->
+        <script src="js/validate.js"></script>
     </body>
 </html>
